# Agency-Soul-SAAS

./: .env  .gitignore  PLANNING.md  TASKS.MD  composer.json  routes.txt  server_log.txt  test_llm_manager.py  test_server.py  verification.php
ai_agent/: .azure.env  .env.example  .env.prod  .gitignore  COMPANY_ISOLATION.md  Dockerfile  README.md  check_schema.py  detailed_viz_test.py  fix_duplicates.py  fix_sql_gen.py  fix_syntax.py  fix_visualization.py  fix_visuals.py  main.py  pyproject.toml  requirements.txt  run_app.sh  schema.txt  server_log.txt  test_imports.py  test_visualization_fixes.py  test_viz.py  test_viz_components.py  test_viz_detailed.py
ai_agent/app/: test_langgraph_agents.py
ai_agent/app/agents/: base_agent.py  crm_agent.py  dispatcher.py  finance_agent.py  hrm_agent.py  product_service_agent.py  project_management_agent.py  sales_agent.py  specialized_agent_base.py  sql_agent.py  visualization_agent.py  visualization_langgraph_agent.py
ai_agent/app/api/: router.py  routes.py  test_mcp_integration.py  test_visualization.py
ai_agent/app/core/: config.py  dependencies.py  langgraph_agents.py  llm.py  security.py  token_manager.py
ai_agent/app/database/: connection.py  queries.py
ai_agent/app/schema/: requests.py  responses.py
ai_agent/app/utils/: langgraph_utils.py  visualization.py
ai_agent/app/visualizations/: chart_utils.py  generator.py  visualization_agent.py
ai_agent/app/visualizations/langgraph/: __init__.py  chart_agent.py  database_manager.py  llm_manager.py  sql_agent.py  state.py  visualization_agent.py  workflow.py
(+99 files in other folders)
